[package]
name = "ws2can"
version = "0.1.0"
authors = ["jalal <jalalhosseiny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
futures-util = "0.3.13"
futures-channel = "0.3.13"
tokio = { version = "1.3.0", features = ["full"] }
tokio-tungstenite = "0.14.0"
tokio-socketcan = "0.3.0"
