[package]
name = "ws2can"
version = "0.1.0"
authors = ["jalal - artronics"]
license = "MIT"
description = "A websocket to socketcan convertor. It receives a json CAN frame and send it via socketcan to the device"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0.123", featuers = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.123"
futures-util = "0.3.13"
futures-channel = "0.3.13"
tokio = { version = "1.3.0", features = ["full"] }
tokio-tungstenite = "0.14.0"
tokio-socketcan = "0.3.0"
